@startuml
'https://plantuml.com/class-diagram
skinparam maxWidth 1200
skinparam maxHeight 1000
'skinparam linetype ortho

abstract class AbstractEntity {
    -id: UUID
    -version: Long
    -createdAt: LocalDateTime
    -updatedAt: LocalDateTime
}

note bottom of AbstractEntity: Wszystkie klasy poza LastVotingsUpdate dzidziczą po tej klasie

'Głosy

enum UserVoteResult {
    DEFINITELY_YES
    YES
    I_DONT_KNOW
    NO
    DEFINITELY_NO
}

'Głosy głosowanie

abstract class UserVoteVoting {
    -age: int
    -user: User
    -gender: Gender
    -voting: Voting
    -parliamentaryClub: ParliamentaryClub
}

class UserVoteOnList {
    -votingOption: VotingOption
}

class UserVoteOther {
    -userVoteResult: UserVoteResult
}

UserVoteOther --> UserVoteResult
UserVoteOnList --|> UserVoteVoting
UserVoteOther --|> UserVoteVoting
ParliamentaryClub "1" *-- "*" UserVoteVoting

'Głosy sondaż

abstract class UserVoteSurvey {
    -age: int
    -user: User
    -gender: Gender
    -survey: Survey
}

class UserVoteParliamentaryClub {
    -parliamentaryClub: ParliamentaryClub
}

class UserVoteOtherSurvey {
    -result: UserVoteResult
    -parliamentaryClub: ParliamentaryClub
}

UserVoteOtherSurvey --> UserVoteResult
UserVoteParliamentaryClub --|> UserVoteSurvey
UserVoteOtherSurvey --|> UserVoteSurvey
ParliamentaryClub "1" *-- "*" UserVoteOtherSurvey

'Sondaż

class Survey {
    -title: String
    -description: String
    -endDate: LocalDateTime
    -surveyKind: SurveyKind
}

enum SurveyKind {
    PARLIAMENTARY_CLUB
    OTHER
}

Survey ---> SurveyKind
UserVoteSurvey "1" *-- "*" Survey
UserVoteSurvey "1" *-- "*" User
UserVoteSurvey "1" *-- "*" Gender

UserVoteVoting "1" *-l- "*" User
UserVoteVoting "1" *-- "*" Gender

'Tokeny

abstract class SafeToken {
    -token: String
    -expirationDate: LocalDateTime
    -user: User
}

class AccountVerificationToken {
    {static} EXPIRATION_TIME: int
}

class ResetPasswordToken {
    {static} EXPIRATION_TIME: int
}

ResetPasswordToken --|> SafeToken
AccountVerificationToken --|> SafeToken

'Użytkownik

class Gender {
    -name: GenderEnum
}

enum GenderEnum {
    MALE
    FEMALE
    OTHER
}

class Role {
    -name: UserRoleEnum
}

enum UserRoleEnum {
    ADMINISTRATOR
    MODERATOR
    USER
    VOTER
}

enum RoleRequestResolution {
    ACCEPTED
    REJECTED
    PENDING
}

class User {
    -username: String
    -password: String
    -firstName: String
    -lastName: String
    -phoneNumber: String
    -birthDate: LocalDateTime
    -email: String
    -gender: Gender
    -language: String
    -totpSecret: String
    -authorisationTotpSecret: String
    -voterRoleRequest: VoterRoleRequest
    -verified: boolean
    -blocked: boolean
    -failedLoginAttempts: int
    -lastLogin: LocalDateTime
    -lastFailedLogin: LocalDateTime
    -oAuthId: String
    -roles: Set<Role>
    -parliamentaryClub: ParliamentaryClub
}

class VoterRoleRequest {
    -resolution: RoleRequestResolution
    -requestDate: LocalDateTime
    -user: User
}

enum RoleRequestResolution {
    ACCEPTED
    REJECTED
    PENDING
}

class Envoy {
    -inTermNumber: Long
    -club: ParliamentaryClub
    -firstName: String
    -lastName: String
    -email: String
    -numberOfVotes: int
    -districtName: String
    -active: boolean
}

class LastVotingsUpdate {
    -id: Long
    -lastSitting: Sitting
}

class ParliamentaryClub {
    -shortName: String
    -term: String
    -email: String
    -fax: String
    -membersCount: Integer
    -name: String
    -phone: String
}

class Print {
    -number: String
    -title: String
    -url: String
    -term: String
    -votings: List<Voting>
}

class Sitting {
    -number: Long
    -title: String
    -term: String
}

class Vote {
    -envoy: Envoy
    -vote: VoteResult
    -club: String
    -votingOption: VotingOption
    -voting: Voting
}

enum VoteResult {
    YES
    NO
    ABSTAIN
    ABSENT
    VOTE_VALID
}

class Voting {
    -votingNumber: int
    -sitting: Sitting
    -sittingDay: int
    -date: LocalDateTime
    -votingOptions: List<VotingOption>
    -votes: List<Vote>
    -userVotes: List<UserVoteVoting>
    -kind: VotingKind
    -endDate: LocalDateTime
    -title: String
    -description: String
    -topic: String
    -prints: List<Print>
}

enum VotingKind {
    ELECTRONIC
    TRADITIONAL
    ON_LIST
}

class VotingOption {
    -option: String
    -optionIndex: int
    -votes: int
    -voting: Voting
}

User "1" --* "0..1" SafeToken
User "*" *-- "1" Gender
User "*" *-- "1..4" Role
User "1" --* "0..1" VoterRoleRequest
Gender ---> GenderEnum
Role ---> UserRoleEnum
VoterRoleRequest ---> RoleRequestResolution

User "*" --> "0..1" ParliamentaryClub
UserVoteOnList "1" *-- "1" VotingOption
UserVoteParliamentaryClub "1" *-- "*" ParliamentaryClub

Print "*" -- "*"  Voting
Vote "1" *-- "1" Envoy
Vote --> VoteResult
Vote "1" *-- "0..1" VotingOption
Vote "*" *-- "1" Voting
VotingOption "0..*" *-- "1" Voting
VotingKind <-- Voting
Sitting "*" --* "1" Voting
Envoy "1" *-- "1" ParliamentaryClub
LastVotingsUpdate "1" *-- "1" Sitting
Voting "*" --* "1" UserVoteVoting


hide empty members
@enduml